--- a/index.qmd
+++ b/index.qmd
@@ -2554,9 +2554,10 @@ Neurtal Network
 :::
 
 :::
-
+::: {.fragment .fade-out fragment-index="9"}
 ::: {.absolute .fragment .fade-in fragment-index="4" bottom="0%" left="42.3%"}
 ![](Images/Logo_BICOME.png){height="400"}
+:::
 :::
 
 ::: {.absolute .fragment .fade-in-then-out fragment-index="8" bottom="0%" left="0%"}
@@ -2566,12 +2567,12 @@ Neurtal Network
 ::: {.absolute .fragment .fade-in-then-out fragment-index="8" bottom="0%" right="0%"}
 ![](Images/Gaf_Low_Pred_V2.png){height="1200"}
 :::
-
+::: {.fragment .fade-out fragment-index="10"}
 ::: {.absolute .fragment .fade-in fragment-index="8" bottom="0%" left="0%"}
 ![](Images/DISCOV_logo.png){height="300"}
 :::
 
-::: {.fragment .fade-out fragemnt-index="10"}
+
 ::: {.absolute .fragment .fade-in fragment-index="8" bottom="0%" left="65%"}
 ![](Images/DISCOV_logoV2.png){height="300"}
 :::
@@ -2643,3 +2644,16 @@ plot <- leaflet() %>%
 htmlwidgets::saveWidget(plot, file="maps/map_pred_Belon_DISCOV2.html")
 
 ```
+
+::: {.absolute .fragment .fade-in fragment-index="10" left="0%"}
+
+```{=html}
+<iframe width="2400" height="1050" src="maps/map_pred_Belon_DISCOV2.html" title="Webpage example"></iframe>
+```
+:::
+
+
+
+::: {.absolute .fragment .fade-in fragment-index="10" bottom="0%" left="0%"}
+![](Images/Scale_pred.png){height="100"}
+:::
