--- a/index.qmd
+++ b/index.qmd
@@ -105,7 +105,7 @@ library("leaflet.extras")
 
 - **4** - DISCOV model - Application and Update for *Gracilaria vermiculophylla* prediction
 
-- **5** - Heatwave on Seagrass experiment
+- **5** - Impact of heatwave on *Nanozostera noltei* meadows
 
 - **6** - Additional work parallel to the thesis
 
@@ -2656,4 +2656,113 @@ htmlwidgets::saveWidget(plot, file="maps/map_pred_Belon_DISCOV2.html")
 
 ::: {.absolute .fragment .fade-in fragment-index="10" bottom="0%" left="0%"}
 ![](Images/Scale_pred.png){height="100"}
+:::
+
+## 
+
+::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 40%; width: 2400px; transform: translate(-50%, -50%)"}
+[Impact of heatwave on *Nanozostera noltei* meadows]{style="color: black; font-size: 150px; font-weight: bold;"}
+:::
+
+## Context {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+[1 2 3 4]{style="opacity:0.25"} 5 [6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[22]{style="color: black;"}
+:::
+
+::: {.absolute top="10%" left="0%"}
+![](Images/Bleached_Seagrasses.jpeg){height="1000"}
+:::
+
+::: {.absolute bottom="9%" left="0%" style="font-size: 45px;"}
+Bleached seagrasses, June 2022, Portugal
+:::
+
+::: {.absolute top="10%" data-id="GafLow" right="20%"}
+![](Data\Micasense_images\Gafanha_Low.png){height="1000"}
+:::
+
+## Context {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+[1 2 3 4]{style="opacity:0.25"} 5 [6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[22]{style="color: black;"}
+:::
+
+::: {.absolute top="10%" left="0%"}
+![](Images/Bleached_Seagrasses.jpeg){height="1000"}
+:::
+
+::: {.absolute bottom="9%" left="0%" style="font-size: 45px;"}
+Bleached seagrasses, June 2022, Portugal
+:::
+
+::: {.absolute .fragment .fade-out fragment-index="1" data-id="GafLow" top="10%" right="-3%"}
+![](Data\Micasense_images\Gafanha_Low2.png){height="3000"}
+:::
+
+
+::: {.absolute bottom="27%" .fragment .fade-in-then-out fragment-index="1" left="48%" style="font-size: 45px;"}
+1.5°C SST Anomaly
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="1" data-id="GafLow" top="20%" right="0%"}
+![](Images/Marine_Heatwaves_Portugal.png){height="600"}
+:::
+
+
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="2" data-id="GafLow" top="10%" right="20%"}
+![](Images/Air_Temperature_May.png){height="1000"}
+:::
+
+::: {.absolute bottom="7%" .fragment .fade-in-then-out fragment-index="2" right="16%" style="font-size: 45px;"}
+2.5 to 3.5°C air temperature anomaly
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="3" data-id="GafLow" top="10%" left="48%"}
+![](Images/Paper_HeatWave1.png){height="400"}
+:::
+
+::: {.absolute bottom="25%" .fragment .fade-in-then-out fragment-index="3" left="48%" style="font-size: 45px;"}
+Marine Heatwave in Winter or Spring :
+
+  - Up to **50% lower biomass** in Summer
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="4" data-id="GafLow" top="10%" left="48%"}
+![](Images/Paper_HeatWave2.png){height="500"}
+:::
+
+::: {.absolute bottom="25%" .fragment .fade-in-then-out fragment-index="4" left="48%" style="font-size: 45px;"}
+Simulated marine heat waves on *Zostera marina* :
+
+  - Decline in photophysiological parameters, even after the temperature returns to normal
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="5" data-id="GafLow" top="10%" left="48%"}
+![](Images/Paper_HeatWave3.png){height="500"}
+:::
+
+::: {.absolute bottom="25%" .fragment .fade-in-then-out fragment-index="5" left="48%" style="font-size: 45px;"}
+Simulated air heatwaves on *Zostera noltei* :
+
+  - **Quick response** : Over-expression of heat-shock proteins occurs 30 minutes after exposure to high air temperature. 
+  - **Long-term impact** : Over-expression remains post-heat-shock.
+  
+:::
+
+::: {.gradient_box .fragment .fade-in fragment-index="6" style="text-align: center; position: absolute; left: 70%; top: 45%; width: 1000px; transform: translate(-50%, -50%)"}
+[Impact of heatwave on Reflectance and on pigment composition ?]{style="color: black; font-size: 100px; font-weight: bold;"}
 :::
