--- a/index.qmd
+++ b/index.qmd
@@ -2766,3 +2766,30 @@ Simulated air heatwaves on *Zostera noltei* :
 ::: {.gradient_box .fragment .fade-in fragment-index="6" style="text-align: center; position: absolute; left: 70%; top: 45%; width: 1000px; transform: translate(-50%, -50%)"}
 [Impact of heatwave on Reflectance and on pigment composition ?]{style="color: black; font-size: 100px; font-weight: bold;"}
 :::
+
+## Benthic Chambers {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+[1 2 3 4]{style="opacity:0.25"} 5 [6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[23]{style="color: black;"}
+:::
+
+::: {.absolute .fragment .fade-out fragment-index="1" top="10%" left="0%"}
+![](Images/Intertidal_Chambers.png){height="600"}
+:::
+
+::: {.absolute .fragment .fade-in-then-out fragment-index="1" top="10%" left="0%"}
+![](Images/Intertidal_Chambers2.png){height="600"}
+:::
+
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 10%; left: 0%; ">
+<video id="droneVideo" muted autoplay height="600">
+  <source src="Videos/Benthic_Chamber.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+</div>
